setup translate route

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@core/*":["src/app/core/*"],
+      "@admin/*":["src/app/admin/*"],
+      "@public/*":["src/app/public/*"],
+      "@shared/*":["src/app/shared/*"]
+    }
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
