--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@gilsdav/ngx-translate-router": "^3.1.5",
     "@nguniversal/express-engine": "^11.0.0",
     "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
