--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:ssr": "ng run nghia-assignment:serve-ssr",
     "serve:ssr": "node dist/nghia-assignment/server/main.js",
     "build:ssr": "ng build --prod && ng run nghia-assignment:server:production",
-    "prerender": "ng run nghia-assignment:prerender"
+    "prerender": "ng run nghia-assignment:prerender",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -35,8 +36,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
+    "@angular/cli": "^11.0.2",
+    "@angular/compiler-cli": "^11.0.2",
     "@nguniversal/builders": "^11.0.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
