--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "bufferutil": "^4.0.2",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -54,6 +55,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "utf-8-validate": "^5.0.3",
+    "ws": "^7.4.0",
+    "xhr2": "^0.2.0"
   }
 }
