--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-server": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@gilsdav/ngx-translate-router": "^3.1.5",
+    "@larscom/ngx-translate-module-loader": "^2.1.1",
     "@nguniversal/express-engine": "^11.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
